language/move-lang/tests/move_check/typing/ignore_inferred_resource.exp
error: 

   ┌── tests/move_check/typing/ignore_inferred_resource.move:2:14 ───
   │
 2 │     struct S<T> {}
   │              - Is found to be a non-copyable type here
 3 │     fun no() {
 4 │         S{};
   │         --- The type: '0x8675309::M::S<_>'
   │         ^^^ Cannot ignore resource values. The value must be used
   │

error: 

   ┌── tests/move_check/typing/ignore_inferred_resource.move:4:9 ───
   │
 4 │         S{};
   │         ^^^ Could not infer this type. Try adding an annotation
   │

