language/move-lang/tests/move_check/typing/ignore_inferred_resource.move
module M {
    struct S<T> {}
    fun no() {
        S{};
    }
}
